--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+/* Header */
+
 .navbar {
   background-color: #bb000e;
   font-size: 40px;
@@ -22,9 +24,9 @@
   background-color: #0e0e10;
   color: #bb000e;
   border: none;
-  width: 125px;
-  height: 30px;
-  font-size: 20px;
+  width: 6.5vw;
+  height: 1.5vw;
+  font-size: 1.04vw;
   border-radius: 30mm;
 }
 
@@ -41,19 +43,13 @@
   border-radius: 30mm;
 }
 
-.maini{
-  height: 100%;
-padding: 50px;
-  background-color: #0e0e10;
-  color: #bb000e;
-  text-align: center;
-  font-size: 25px;
-  align-items: center;
-  display: flex;
-  flex-wrap: wrap;
-  vertical-align: top;
-}
 
+
+
+
+
+
+/* Footer */
 
 .foot{
   background-color: #e31c25;
@@ -62,29 +58,60 @@ padding: 50px;
   color: #0e0e10;
 }
 
+
+
+
+
+
+
+/* Card Layout */
+.maini{  
+  padding: 20px 50px;
+  background-color: #0e0e10;
+  color: #bb000e;
+  box-sizing: border-box;
+}
+
+.maini:after{
+  content: "";
+  display: block;
+  clear: both;
+}
+
 .card {
-  margin: 35px 60px 35px 60px;
-  font-size: 25px;
-  width: 306px;
+  margin: 2.5%;
+  font-size: 1.3vw;
+  width: 18%;
+  padding: 1%;
+  float: left;
 }
 
 .thumbnail{
-  width: 300px;
-  border: 3px solid #bb000e;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  width: 99%;
+  border: 0.15vw solid #bb000e;
 }
 
 .info{
-  height: 20px;
+  height: 0.8em;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0px 5px 0px 5px;
+  padding: 0.4em 0.2em;
+}
+
+.info:after{
+  content: "";
+  display: block;
+  clear: both;
 }
 
 .streamname {
   text-align: left;
   float: left;
-  margin: 0px;
+  margin: 0%;
   width: 75%;
 }
 
@@ -95,8 +122,27 @@ padding: 50px;
 
 .viewers {
   text-align: right;
-  padding-left: 5px;
+  padding-left: 0.2em;
   float: right;
-  margin: 0px;
+  margin: 0%;
   text-align: right;
+}
+
+
+@media (max-width: 768px) {
+  .card {
+    margin: 2.5%;
+    font-size: 1.7vw;
+    width: 26.33%;
+    padding: 1%;
+  }
+}
+
+@media (max-width: 480px) {
+  .card {
+    margin: 2.5%;
+    font-size: 5vw;
+    width: 93%;
+    padding: 1%;
+  }
 }
